# repobounty-ai

./: .codex  .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPROVEMENTS.md  README.md  docker-compose.yml  package-lock.json  smartcontract.md  start.sh
.openspec/proposals/: about-page.md  fix-claim-flow.md
backend/: .Dockerignore  .dockerignore  .env.example  Dockerfile  docker-compose.yml  go.mod  go.sum  repobounty.db  repobounty.db-shm  repobounty.db-wal
backend/config/: config.go
docs/: TROUBLESHOOT-ISSUE-CREATION.md  api.md  architecture.md  backend-vs-smart-contract.md  current-implementation.md  demo-script.md  fix-backend-smart-contract-gaps-agent-prompt.md  github-issue-creation.md  hackathon-context.md  implementation-plan.md  roadmap.md  setup-guide.md  smart-contract.md
frontend/: .env.example  .eslintrc.cjs  .prettierrc.json  Dockerfile  index.html  nginx-main.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
program/: .dockerignore  Anchor.toml  Dockerfile  package-lock.json  package.json  rust-toolchain.toml
program/programs/repobounty/: Cargo.toml
program/programs/repobounty/src/: constants.rs  errors.rs  events.rs  lib.rs
program/programs/repobounty/src/instructions/: claim.rs  claim_backend_paid.rs  claim_user_paid.rs  close_unfinalizable.rs  create_campaign.rs  finalize_campaign.rs  initialize_config.rs  mod.rs  refund_unclaimed.rs  set_paused.rs  update_config.rs
program/programs/repobounty/src/state/: campaign.rs  claim_record.rs  config.rs  mod.rs
(+101 files in other folders)
