[package]
name = "repobounty"
version = "0.1.0"
description = "RepoBounty AI - AI-driven contributor reward allocation on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "repobounty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))'] }
